{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 1048,
  "lineage": "ba865764-6024-7a82-1f36-b09ceb246c59",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "provisioning_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/publicIPAddresses/provisioning-ipconfig-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.174.234.115",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "provisioning-ipconfig-0",
            "resource_group_name": "boujenna_selma-rg",
            "sku": "Basic",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "provisioning_public_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/publicIPAddresses/provisioning-ipconfig-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.232.19.145",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "provisioning-ipconfig-1",
            "resource_group_name": "boujenna_selma-rg",
            "sku": "Basic",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "provisioning_public_ip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/publicIPAddresses/provisioning-ipconfig-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.233.193.123",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "provisioning-ipconfig-2",
            "resource_group_name": "boujenna_selma-rg",
            "sku": "Basic",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "provisioning-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/networkInterfaces/provisioning-nic-0",
            "internal_domain_name_suffix": "nbtxtdeo0vhefnsxzzwguqhnqg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/publicIPAddresses/provisioning-ipconfig-0",
                "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/virtualNetworks/provisioning-vnet/subnets/provisioning-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-81-10-6B",
            "name": "provisioning-nic-0",
            "private_ip_address": "10.123.0.6",
            "private_ip_addresses": [
              "10.123.0.6"
            ],
            "resource_group_name": "boujenna_selma-rg",
            "virtual_machine_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Compute/virtualMachines/provisioning-0"
          },
          "dependencies": [
            "azurerm_public_ip.provisioning_public_ip",
            "azurerm_subnet.provisioning-subnet",
            "azurerm_virtual_network.provisioning-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/networkInterfaces/provisioning-nic-1",
            "internal_domain_name_suffix": "nbtxtdeo0vhefnsxzzwguqhnqg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/publicIPAddresses/provisioning-ipconfig-1",
                "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/virtualNetworks/provisioning-vnet/subnets/provisioning-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-47-67-DE",
            "name": "provisioning-nic-1",
            "private_ip_address": "10.123.0.5",
            "private_ip_addresses": [
              "10.123.0.5"
            ],
            "resource_group_name": "boujenna_selma-rg",
            "virtual_machine_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Compute/virtualMachines/provisioning-1"
          },
          "dependencies": [
            "azurerm_public_ip.provisioning_public_ip",
            "azurerm_subnet.provisioning-subnet",
            "azurerm_virtual_network.provisioning-vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/networkInterfaces/provisioning-nic-2",
            "internal_domain_name_suffix": "nbtxtdeo0vhefnsxzzwguqhnqg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/publicIPAddresses/provisioning-ipconfig-2",
                "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/virtualNetworks/provisioning-vnet/subnets/provisioning-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "7C-1E-52-26-E7-AC",
            "name": "provisioning-nic-2",
            "private_ip_address": "10.123.0.4",
            "private_ip_addresses": [
              "10.123.0.4"
            ],
            "resource_group_name": "boujenna_selma-rg",
            "virtual_machine_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Compute/virtualMachines/provisioning-2"
          },
          "dependencies": [
            "azurerm_public_ip.provisioning_public_ip",
            "azurerm_subnet.provisioning-subnet",
            "azurerm_virtual_network.provisioning-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "provisioning-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/networkSecurityGroups/provisioning-nsg",
            "location": "westeurope",
            "name": "provisioning-nsg",
            "resource_group_name": "boujenna_selma-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "security_rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/networkSecurityGroups/provisioning-nsg/securityRules/security_rule",
            "name": "security_rule",
            "network_security_group_name": "provisioning-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "boujenna_selma-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.provisioning-nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "provisioning_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/publicIPAddresses/provisioning-ipconfig-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.174.234.115",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "provisioning-ipconfig-0",
            "resource_group_name": "boujenna_selma-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/publicIPAddresses/provisioning-ipconfig-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.232.19.145",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "provisioning-ipconfig-1",
            "resource_group_name": "boujenna_selma-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/publicIPAddresses/provisioning-ipconfig-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.233.193.123",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "provisioning-ipconfig-2",
            "resource_group_name": "boujenna_selma-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "provisioning-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/virtualNetworks/provisioning-vnet/subnets/provisioning-subnet",
            "name": "provisioning-subnet",
            "resource_group_name": "boujenna_selma-rg",
            "virtual_network_name": "provisioning-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.provisioning-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sub_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/virtualNetworks/provisioning-vnet/subnets/provisioning-subnet",
            "network_security_group_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/networkSecurityGroups/provisioning-nsg",
            "subnet_id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/virtualNetworks/provisioning-vnet/subnets/provisioning-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.provisioning-nsg",
            "azurerm_subnet.provisioning-subnet",
            "azurerm_virtual_network.provisioning-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "provisioning-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8c796768-d58e-424e-b657-ce6c6a40ed86",
            "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/virtualNetworks/provisioning-vnet",
            "location": "westeurope",
            "name": "provisioning-vnet",
            "resource_group_name": "boujenna_selma-rg",
            "subnet": [
              {
                "address_prefix": "10.123.0.0/24",
                "id": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/virtualNetworks/provisioning-vnet/subnets/provisioning-subnet",
                "name": "provisioning-subnet",
                "security_group": "/subscriptions/41e50375-b926-4bc4-9045-348f359cf721/resourceGroups/boujenna_selma-rg/providers/Microsoft.Network/networkSecurityGroups/provisioning-nsg"
              }
            ],
            "tags": {
              "Pillar": "M Cloud",
              "Role": "Futures",
              "Usage": "Training / Certification related activities"
            }
          }
        }
      ]
    }
  ]
}